--- a/.jshintrc
+++ b/.jshintrc
@@ -6,7 +6,7 @@
   "eqeqeq": true,
   "forin": true,
   "immed": true,
-  "indent": 4,
+  "indent": 2,
   "latedef": true,
   "newcap": true,
   "noarg": true,
@@ -22,12 +22,12 @@
   "maxdepth": 4,
   "maxstatements": false,
   "maxcomplexity": false,
-  "maxlen": 120,
+  "maxlen": 200,
   "asi": false,
   "boss": false,
   "debug": false,
   "eqnull": true,
-  "esnext": false,
+  "esnext": true,
   "moz": false,
   "evil": false,
   "expr": false,
